REST-46. Fix findbugs inefficient constructor error.
issue: https://jira.kiji.org/browse/REST-46
review: https://review.kiji.org/r/1156
commit: https://github.com/kijiproject/kiji-rest/commit/1636585a0c5db4a61300a6dc9ea2dd1f29f69f34